--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0", features = ["backtrace"] }
+thiserror = "1.0"
 log = "0.4"
 env_logger = "0.8"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
