--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ log = "0.4"
 env_logger = "0.8"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
 tokio-util = { version = "0.6", features = ["codec"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tun = { version = "0.5", features = ["async"] }
 bytes = { version = "1" }
 byteorder = { version = "1" }
