--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,3 +7,5 @@ publish = false
 [dev-dependencies]
 rimnet = { version = "0.1.0", path = "../" }
 packet = "0.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
