--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,6 +13,6 @@ packet = "0.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 env_logger = "0.8"
-clap = "3.0.0-beta.5"
+clap = { version = "3.0", features = ["derive"] }
 base64 = "0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
