--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lib = { version = "0.1.0", path = "../lib" }
+network = { version = "0.1.0", path = "../network" }
 
 anyhow = { version = "1.0", features = ["backtrace"] }
 packet = "0.1"
