--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -23,3 +23,8 @@ ring = { version = "^0.16.2", features = ["std"] }
 hex = "0.4"
 lazy_static = "1.4"
 base64 = "0"
+
+[dev-dependencies]
+network = { version = "0.1.0", path = "../network" }
+
+clap = { version = "3.0", features = ["derive"] }
