--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 lib = { version = "0.1.0", path = "../lib" }
+network = { version = "0.1.0", path = "../network" }
 
 anyhow = { version = "1.0", features = ["backtrace"] }
 clap = { version = "3.0", features = ["derive"] }
 base64 = "0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
+regex = "1"
