--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -23,6 +23,7 @@ ring = { version = "^0.16.2", features = ["std"] }
 hex = "0.4"
 lazy_static = "1.4"
 base64 = "0"
+regex = "1"
 
 [dev-dependencies]
 network = { version = "0.1.0", path = "../network" }
