--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,12 @@
 name: Cargo Build & Test
 
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - main
 
-env: 
+env:
   CARGO_TERM_COLOR: always
 
 jobs:
@@ -17,6 +19,8 @@ jobs:
           - stable
     steps:
       - uses: actions/checkout@v3
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add clippy
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --all-features
       - run: cargo build --verbose
       - run: cargo test --verbose
