--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,32 @@ env:
 
 jobs:
   build_and_test:
-    name: Rust project - latest
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
+
     steps:
-      - uses: actions/checkout@v3
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add clippy
-      - run: cargo fmt --all -- --check
-      - run: cargo clippy --all-features
-      - run: cargo build --verbose
-      - run: cargo test --verbose
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+            components: rustfmt, clippy
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --verbose
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --verbose
