--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,21 +22,7 @@ jobs:
         with:
             components: rustfmt, clippy
 
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --verbose
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose
+      - run: cargo fmt --all -- --check
+      - run: cargo build --verbose
+      - run: cargo clippy --all-features
+      - run: cargo test --verbose
